Verification for Hybrid node pool/Case-15-Limit-egress-using-ports-in-a-range-for-windows/Networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ports-in-a-range
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: curl
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 5000
          endPort: 7000
